# PythonProject_3_Search_vacancies_BD

./: README.md  company_ids.json  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat  run_tests.sh
data/: vacancies.csv  vacancies.json  vacancies.txt  vacancies.xlsx
src/: __init__.py
src/api/: __init__.py  base.py  hh_api.py
src/bd_sql/: .env_template  config.py  db.py  db_manager.py  employers_top10.py  get_employers_id.py  main.py
src/managers/: __init__.py  vacancy_manager.py
src/models/: vacancy.py
src/storage/: __init__.py  base.py  csv_storage.py  excel_storage.py  json_storage.py  txt_storage.py
tests/: test_api.py  test_csv_storage.py  test_excel_storage.py  test_json_storage.py  test_manager.py  test_txt_storage.py  test_vacancy.py  test_validation.py
