[tool.poetry]
name = "pythonproject-2-search-for-vacancies"
version = "0.1.0"
description = ""
authors = ["Андрей Стюхин <andreyst@olovyannaya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
