[tool.poetry]
name = "pythonproject-3-search-for-vacancies_BD"
version = "0.1.0"
description = ""
authors = ["Андрей Стюхин <andreyst@olovyannaya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.10"
requests = "*"
openpyxl = "^3.1.5"
pytest-mock = "==3.14.1"
colorama = "==0.4.6"
coverage = "==7.8.2"
pytest-cov = "==6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
